--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/RobinUS2/golang-moving-average"
+
+[[constraint]]
+  name = "github.com/bwmarrin/discordgo"
+  version = "0.19.0"
